2.9: 2012-11-24
  Exclude .git/.bzr/.hg repo directories as well as .svn.

2.8: 2005-10-19
  Change license to BSD. Tweak Python to use hashlib rather than
  the deprecated md5 module.  Suppress some compiler warnings.

2.7: 2005-01-07
  Improvements to regression-test machinery.  
  Document the FAQ about comparing a tree to itself.

2.6: 2004-08-20
  Ignore .svn files and and SVN subdirectories.  Typo fixes on manual page.

2.5: 2004-07-07
  Alan Burlinson's tweaks to ease porting to SunOS. Emil Sit's 
  dramatic speedup for SCF-file reads.  Fix incorrect statistics
  generation with filterator -mfF options -- counts were too high.
  Documentation fixes.

2.4: 2004-03-11
  Fixed strtok() bug apparently introduced by C library change.
  Added -n, -f, and -F options to filterator.

2.3: 2003-12-29
  Source RPMs no longer depend on myversion symbol.
  New -N option style supports multiple normalizers.
  Fix a bug that might have caused a SEGV on really large shreds.

2.2: 2003-12-24
  Better error reporting in comparator.py.
  Fix a packaging error.

2.1: 2003-08-19
  Refactored code to make it possible to plug in new feature analyzers.
  Logic for handling trailing blank lines in files works slightly better.

2.0: 2003-08-18
  Now uses custom 8-byte digest function suggested by Ron Rivest, the inventor
  of MD5.  The new function is faster and about halves the size of SCF files.
  This format change is not compatible with 1.x versions.
  There is a new -m option to set the minimum span size to be output.
  The filterator -s option has been changed to -m to match it.
  filterator is now a wrapper around comparator.py, a loadable Python
  module which can be used to write other report generators.
  Significance filtering for C and shell is now done within comparator
  itself, and is accordingly much faster.
  FreeBSD port patches from Warren Toomey.

1.6: 2003-09-15
  Regression-test production now in place.